# contract-bridge

./: LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml
contract_bridge/: game.py  pocker.py
tests/: conftest.py  test_game.py  test_pocker.py  test_user.py
