[tool.poetry]
authors = ["Mason Lin <mason.lin1@hp.com>"]
description = "code for fun, contract bridge game"
license = "MIT"
name = "contract-bridge"
packages = [{include = "contract_bridge"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.92.0"
python = "^3.9"
tenacity = "^8.2.2"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.12.0"
coverage = "^6.5.0"
ipython = "^8.10.0"
pre-commit = "^2.21.0"
pylama = {extras = ["all"], version = "^8.4.1"}
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest-httpx = "^0.21.3"
pytest-mock = "^3.10.0"
pytest-watch = "^4.2.0"
pytest-xdist = "^3.2.0"
safety = "^2.3.5"

[tool.pytest.ini_options]
addopts = "-ra -s -v"
asyncio_mode = "strict"
minversion = "6.0"
norecursedirs = []

[tool.coverage.run]
branch = true

[tool.pylama]
format = "pylint"
linters = "eradicate,mccabe,pycodestyle,pyflakes,pylint,isort"
skip = "*/.env/*,static/*"

[tool.pylama.linter.pyflakes]
builtins = "_"

[tool.pylama.linter.pycodestyle]
ignore = "E203,W503"
max_line_length = 140
statistics = true

[tool.pylama.linter.pylint]
disable = "C,R,W0613,W0703,W0707,W1203"
extension-pkg-whitelist = "pydantic"
max_line_length = 140

[tool.pylama.linter.isort]
line_length = 140
profile = "black"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
